force-app/main/default/objects/Order_Detail__c/Order_Detail__c.object-meta.xml
<CustomObject>
    <description>Details of Orders placed.</description>
    <label>Order Detail</label>
    <nameField>
        <displayFormat>ORD-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>