force-app/main/default/objects/Order_Detail__c/fields/Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing Address for the order placed.</description>
    <inlineHelpText>The placed order will be billed to this address.</inlineHelpText>
    <label>Bill To Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Billing contact should always belongs to the employer account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Employer__c</valueField>
        </filterItems>
        <infoMessage>Select Employer</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Details</relationshipLabel>
    <relationshipName>Order_Details</relationshipName>
    <type>Lookup</type>
</CustomField>