force-app/main/default/objects/Order_Detail__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>Date of order cancellation</description>
    <inlineHelpText>Enter cancel date for a order when you mark it cancelled</inlineHelpText>
    <label>Cancellation Date</label>
    <type>DateTime</type>
</CustomField>