force-app/main/default/objects/Order_Detail__c/fields/Cancellation_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_reason__c</fullName>
    <description>Reason of order cancellation</description>
    <inlineHelpText>Select appropriate order cancellation reason</inlineHelpText>
    <label>Cancellation reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order my mistake</fullName>
            </value>
            <value>
                <fullName>No longer required</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>