force-app/main/default/objects/Order_Detail__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <description>Employer of the Contact who placed order</description>
    <inlineHelpText>Enter your Employer name</inlineHelpText>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Details</relationshipLabel>
    <relationshipName>Order_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>