force-app/main/default/objects/Order_Detail__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag is set to true once a order has been invoiced</description>
    <inlineHelpText>If invoice is generated for this order?</inlineHelpText>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>