force-app/main/default/objects/Order_Detail__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Mobile number of the person who Purchased the product</description>
    <formula>Bill_To_Contact__r.MobilePhone</formula>
    <inlineHelpText>Mobile number of the person who Purchased the product</inlineHelpText>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>