force-app/main/default/objects/Order_Detail__c/fields/Order_Date1__c.field-meta.xml
<CustomField>
    <fullName>Order_Date1__c</fullName>
    <description>Date order was placed.</description>
    <inlineHelpText>Date pf order placement.</inlineHelpText>
    <label>Order Date1</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>