force-app/main/default/objects/Order_Detail__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>Return current date when a new order is created</description>
    <formula>IF( ISPICKVAL( Status__c , &quot;New&quot;),  DATETIMEVALUE(TODAY()) ,null )</formula>
    <inlineHelpText>Current date time is auto populated as and when a new order is placed.</inlineHelpText>
    <label>Order Date</label>
    <type>DateTime</type>
</CustomField>