force-app/main/default/objects/Order_Detail__c/fields/Payment_Done__c.field-meta.xml
<CustomField>
    <fullName>Payment_Done__c</fullName>
    <description>Status of the payment for placed order</description>
    <inlineHelpText>Payment status for order placed</inlineHelpText>
    <label>Payment Done</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fully Paid</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Not Paid</fullName>
                <default>true</default>
                <label>Not Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>