force-app/main/default/objects/Order_Detail__c/fields/Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Returned_Date__c</fullName>
    <description>Order returned date should not be missing when a order is returned</description>
    <inlineHelpText>Enter Return date when you mark a order as returned</inlineHelpText>
    <label>Returned Date</label>
    <type>DateTime</type>
</CustomField>