force-app/main/default/objects/Order_Detail__c/fields/Returned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Returned_Reason__c</fullName>
    <description>Mention the appropriate return reason while marking an order as returned</description>
    <inlineHelpText>Select return reason for an order</inlineHelpText>
    <label>Returned Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong product delivered</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>quality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>