force-app/main/default/objects/Order_Detail__c/fields/Ship_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Ship the placed order to the selected contact</description>
    <inlineHelpText>Select the contact where it needs to be shipped</inlineHelpText>
    <label>Ship To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Details (Ship To Contact)</relationshipLabel>
    <relationshipName>Order_Details1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>