force-app/main/default/objects/Order_Detail__c/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <description>Date when order is Shipped</description>
    <inlineHelpText>Shipping Date of order</inlineHelpText>
    <label>Shipped Date</label>
    <type>DateTime</type>
</CustomField>