force-app/main/default/objects/Order_Detail__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Shipping Address for the placed order</description>
    <formula>Ship_To_Contact__r.MailingStreet  + &apos; &apos; +  Ship_To_Contact__r.MailingCity + &apos; &apos; +  Ship_To_Contact__r.MailingState + &apos; &apos; +  Ship_To_Contact__r.MailingPostalCode + &apos; &apos; + Ship_To_Contact__r.MailingCountry</formula>
    <inlineHelpText>The placed order shall be shipped to selected Address</inlineHelpText>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>