force-app/main/default/objects/Order_Detail__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Total Payable amount for this order</description>
    <inlineHelpText>To amount Paid for the order.</inlineHelpText>
    <label>Total Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>