force-app/main/default/objects/Order_Detail__c/validationRules/Cancellation_Date_Reason_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Date_Reason_Missing</fullName>
    <active>true</active>
    <description>Cancellation date and cancellation reason is Required, if Status is Cancelled</description>
    <errorConditionFormula>((ISBLANK(Cancellation_Date__c) || ISBLANK(TEXT( Cancellation_reason__c ))) &amp;&amp; (ISPICKVAL(Status__c, &apos;Cancelled&apos;)))</errorConditionFormula>
    <errorMessage>Enter cancellation date and Cancellation Reason when marking a order as cancelled.</errorMessage>
</ValidationRule>