force-app/main/default/objects/Order_Detail__c/validationRules/Order_Date_Cant_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Date_Cant_be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>(  NOT(ISBLANK( PRIORVALUE(Order_Date__c) )) &amp;&amp; (Order_Date__c != PRIORVALUE(Order_Date__c)))</errorConditionFormula>
    <errorDisplayField>Order_Date__c</errorDisplayField>
    <errorMessage>Order date cannot be modified</errorMessage>
</ValidationRule>