force-app/main/default/objects/Order_Detail__c/validationRules/Return_Date_Reason_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Date_Reason_Missing</fullName>
    <active>true</active>
    <description>Return Date and return reason cant be empty when status of order is returned.</description>
    <errorConditionFormula>((ISBLANK(Returned_Date__c) || ISBLANK(TEXT( Returned_Reason__c) )  ) &amp;&amp; ISPICKVAL(Status__c, &apos;Returned&apos;))</errorConditionFormula>
    <errorMessage>When a order is return, Return Date and Return Reason should be selected</errorMessage>
</ValidationRule>