force-app/main/default/objects/Order_Detail__c/validationRules/Shipping_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Date_Required</fullName>
    <active>true</active>
    <description>Shipping_Date_Required whe order is shipped, Delivered, Returned.</description>
    <errorConditionFormula>(ISBLANK(Shipped_Date__c)  &amp;&amp; (ISPICKVAL(Status__c, &apos;Shipped&apos;) || ISPICKVAL(Status__c, &apos;Delivered&apos;) || ISPICKVAL(Status__c, &apos;Returned&apos;)))</errorConditionFormula>
    <errorDisplayField>Shipped_Date__c</errorDisplayField>
    <errorMessage>Provide Shipping Date for orders which are Shipped, Delivered or Returned.</errorMessage>
</ValidationRule>