force-app/main/default/objects/Order_Detail__c/validationRules/Wrong_Bill_to_Contact_Employer.validationRule-meta.xml
<ValidationRule>
    <fullName>Wrong_Bill_to_Contact_Employer</fullName>
    <active>true</active>
    <errorConditionFormula>Bill_To_Contact__r.AccountId != Employer__c</errorConditionFormula>
    <errorDisplayField>Employer__c</errorDisplayField>
    <errorMessage>Select correct Employer for the Billed Contact</errorMessage>
</ValidationRule>