force-app/main/default/objects/Order_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Bill_To_Contact__c</columns>
    <columns>NAME</columns>
    <columns>Ship_To_Contact__c</columns>
    <columns>Employer__c</columns>
    <columns>Invoiced__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Done__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>